Fixed font size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ h1 {
   margin: 1rem;
   display: flex;
   flex-direction: column;
+  align-content: center;
+  justify-content: center;
   gap: 2rem;
   background-color: #2b2d30;
   padding: 3rem;
@@ -44,6 +46,10 @@ button {
 }
 
 @media (max-width: 1000px) {
+  h1 {
+    font-size: 2.25rem;
+  }
+
   button {
     width: 10rem;
     height: 4.5rem;
@@ -51,12 +57,19 @@ button {
 
   .container {
     width: 100%;
+    min-height: 37rem;
     padding: 1rem;
   }
 
   .buttons {
     flex-direction: column;
     gap: 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 1.5rem;
   }
 }
 
